# algebraics

./: .gitignore  CHANGELOG.md  Cargo.toml  Notices.txt  README.md  poly_gcd_test_cases.txt  pyproject.toml  rls.toml
.cargo/: config.toml
pyo3-0.9.2/: .cargo_vcs_info.json  Cargo.toml
src/: algebraic_numbers.rs  array2d.rs  generate_gcd_test_cases.mac  interval_arithmetic.rs  lattice.rs  lib.rs  mod_int.rs  polynomial.rs  prelude.rs  python.rs  quadratic_numbers.rs  traits.rs  util.rs
src/polynomial/: add_sub.rs  distinct_degree_factorization.rs  div_rem.rs  factorization_over_integers.rs  gcd.rs  mul.rs  ops.rs  same_degree_factorization.rs
src/polynomial/ops/: add.rs  add_sub.rs  div_rem.rs  gcd.rs  mul.rs  sub.rs  util.rs
tests/: __init__.py  test_real_algebraic_number.py
