# SPDX-License-Identifier: LGPL-2.1-or-later
# See Notices.txt for copyright information
[package]
name = "algebraics"
version = "0.1.1"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
edition = "2018"
license = "LGPL-2.1-or-later"
description = "algebraic numbers library"
keywords = ["algebraic-numbers", "arbitrary-precision", "polynomials", "real-numbers", "exact-arithmetic"]
repository = "https://salsa.debian.org/Kazan-team/algebraics"
readme = "README.md"

[features]
default = []
python-extension = ["pyo3", "pyo3/extension-module"]

[lib]
name = "algebraics"
crate-type = ["rlib", "cdylib"]

[dependencies]
num-traits = "0.2"
num-bigint = "0.2"
num-integer = "0.1"
num-rational = "0.2"
rand = "0.5"
rand_pcg = "0.1.1"
lazy_static = "1.4"

[dependencies.pyo3]
# switch to crates.io version once new version is published
git = "https://github.com/PyO3/pyo3.git"
rev = "6a89a904e3ce01e9cd3087a540b3604de4119e34"
optional = true
features = ["num-bigint"]
