# SPDX-License-Identifier: LGPL-2.1-or-later
# See Notices.txt for copyright information
[package]
name = "algebraics"
version = "0.2.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
edition = "2018"
license = "LGPL-2.1-or-later"
description = "algebraic numbers library"
keywords = ["algebraic-numbers", "arbitrary-precision", "polynomials", "real-numbers", "exact-arithmetic"]
repository = "https://salsa.debian.org/Kazan-team/algebraics"
readme = "README.md"
categories = ["algorithms", "data-structures", "science"]

[features]
default = []
python = ["pyo3"]
python-extension = ["python", "pyo3/extension-module"]

[lib]
name = "algebraics"
crate-type = ["rlib", "cdylib"]

[dependencies]
num-traits = "0.2"
num-bigint = "0.2"
num-integer = "0.1"
num-rational = "0.2"
rand = "0.5"
rand_pcg = "0.1.1"
lazy_static = "1.4"

[dependencies.pyo3]
version = "0.9.0"
optional = true
features = ["num-bigint"]
